# canasta

./: .replit  CMakeLists.txt  LICENSE  README.md
data/default/canasta/: BaseGameStorage.json
src/: Application.cpp
src/include/: Application.hpp  Card.hpp  Deck.hpp  jsoncpp.cpp
src/include/json/: json-forwards.h  json.h
